--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt debitis voluptates id illum tempora placeat saepe unde et eum eius blanditiis nemo numquam facilis quisquam, ad architecto minima recusandae.</p>
+    <button>Login</button>
 </body>
 </html>
