--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <title>Beauty Cam</title>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt debitis voluptates id illum tempora placeat saepe unde et eum eius blanditiis nemo numquam facilis quisquam, ad architecto minima recusandae.</p>
     <button>Login</button>
 </body>
