--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <title>Beauty Cam - Download now</title>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt debitis voluptates id illum tempora placeat saepe unde et eum eius blanditiis nemo numquam facilis quisquam, ad architecto minima recusandae.</p>
     <button>Login</button>
+    <button>close</button>
 </body>
 </html>
