--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <title>Beauty Cam - Download now</title>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt debitis voluptates id illum tempora placeat saepe unde et eum eius blanditiis nemo numquam facilis quisquam, ad architecto minima recusandae.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque odio molestias architecto dicta quasi dolores, nobis totam, et dolorem voluptatibus doloremque amet! Natus dolores facilis, rerum praesentium facere exercitationem fuga.</p>
     <button>Login</button>
 </body>
 </html>
